--- a/globe.html
+++ b/globe.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <title>Document</title>
     <link rel="stylesheet" href="globe.css">
-    
-  </head>
-  <body>
+
+</head>
+
+<body>
     <!-- Resources -->
     <script src="https://cdn.amcharts.com/lib/5/index.js"></script>
     <script src="https://cdn.amcharts.com/lib/5/map.js"></script>
@@ -14,96 +16,100 @@
 
     <!-- Chart code -->
     <script>
-      am5.ready(function () {
-        // Create root element
-        // https://www.amcharts.com/docs/v5/getting-started/#Root_element
-        var root = am5.Root.new("chartdiv");
+        am5.ready(function () {
+            // Create root element
+            // https://www.amcharts.com/docs/v5/getting-started/#Root_element
+            var root = am5.Root.new("chartdiv");
 
-        // Set themes
-        // https://www.amcharts.com/docs/v5/concepts/themes/
-        root.setThemes([am5themes_Animated.new(root)]);
+            // Set themes
+            // https://www.amcharts.com/docs/v5/concepts/themes/
+            root.setThemes([am5themes_Animated.new(root)]);
 
-        // Create the map chart
-        // https://www.amcharts.com/docs/v5/charts/map-chart/
-        var chart = root.container.children.push(
-          am5map.MapChart.new(root, {
-            panX: "rotateX",
-            panY: "rotateY",
-            projection: am5map.geoOrthographic(),
-            paddingBottom: 20,
-            paddingTop: 20,
-            paddingLeft: 20,
-            paddingRight: 20,
-          })
-        );
+            // Create the map chart
+            // https://www.amcharts.com/docs/v5/charts/map-chart/
+            var chart = root.container.children.push(
+                am5map.MapChart.new(root, {
+                    panX: "rotateX",
+                    panY: "rotateY",
+                    projection: am5map.geoOrthographic(),
+                    paddingBottom: 20,
+                    paddingTop: 20,
+                    paddingLeft: 20,
+                    paddingRight: 20,
+                })
+            );
 
-        // Create main polygon series for countries
-        // https://www.amcharts.com/docs/v5/charts/map-chart/map-polygon-series/
-        var polygonSeries = chart.series.push(
-          am5map.MapPolygonSeries.new(root, {
-            geoJSON: am5geodata_worldLow,
-          })
-        );
+            // Create main polygon series for countries
+            // https://www.amcharts.com/docs/v5/charts/map-chart/map-polygon-series/
+            var polygonSeries = chart.series.push(
+                am5map.MapPolygonSeries.new(root, {
+                    geoJSON: am5geodata_worldLow,
+                })
+            );
 
-        polygonSeries.mapPolygons.template.setAll({
-          tooltipText: "{name}",
-          toggleKey: "active",
-          interactive: true,
-        });
+            polygonSeries.mapPolygons.template.setAll({
+                tooltipText: "{name}",
+                toggleKey: "active",
+                interactive: true,
+            });
 
-        polygonSeries.mapPolygons.template.states.create("hover", {
-          fill: root.interfaceColors.get("primaryButtonHover"),
-        });
+            polygonSeries.mapPolygons.template.states.create("hover", {
+                fill: root.interfaceColors.get("primaryButtonHover"),
+            });
 
-        // Create series for background fill
-        // https://www.amcharts.com/docs/v5/charts/map-chart/map-polygon-series/#Background_polygon
-        var backgroundSeries = chart.series.push(
-          am5map.MapPolygonSeries.new(root, {})
-        );
-        backgroundSeries.mapPolygons.template.setAll({
-          fill: root.interfaceColors.get("alternativeBackground"),
-          fillOpacity: 0.1,
-          strokeOpacity: 0,
-        });
-        backgroundSeries.data.push({
-          geometry: am5map.getGeoRectangle(90, 180, -90, -180),
-        });
+            // Create series for background fill
+            // https://www.amcharts.com/docs/v5/charts/map-chart/map-polygon-series/#Background_polygon
+            var backgroundSeries = chart.series.push(
+                am5map.MapPolygonSeries.new(root, {})
+            );
+            backgroundSeries.mapPolygons.template.setAll({
+                fill: root.interfaceColors.get("alternativeBackground"),
+                fillOpacity: 0.1,
+                strokeOpacity: 0,
+            });
+            backgroundSeries.data.push({
+                geometry: am5map.getGeoRectangle(90, 180, -90, -180),
+            });
 
-        // Create graticule series
-        // https://www.amcharts.com/docs/v5/charts/map-chart/graticule-series/
-        var graticuleSeries = chart.series.push(
-          am5map.GraticuleSeries.new(root, {})
-        );
-        graticuleSeries.mapLines.template.setAll({
-          strokeOpacity: 0.1,
-          stroke: root.interfaceColors.get("alternativeBackground"),
-        });
+            // Create graticule series
+            // https://www.amcharts.com/docs/v5/charts/map-chart/graticule-series/
+            var graticuleSeries = chart.series.push(
+                am5map.GraticuleSeries.new(root, {})
+            );
+            graticuleSeries.mapLines.template.setAll({
+                strokeOpacity: 0.1,
+                stroke: root.interfaceColors.get("alternativeBackground"),
+            });
 
-        // Rotate animation
-        chart.animate({
-          key: "rotationX",
-          from: 0,
-          to: 360,
-          duration: 30000,
-          loops: Infinity,
-        });
+            // Rotate animation
+            chart.animate({
+                key: "rotationX",
+                from: 0,
+                to: 360,
+                duration: 30000,
+                loops: Infinity,
+            });
 
-        // Make stuff animate on load
-        chart.appear(1000, 100);
-      }); // end am5.ready()
+            // Make stuff animate on load
+            chart.appear(1000, 100);
+        }); // end am5.ready()
     </script>
 
     <!-- HTML -->
     <div class="globe" id="chartdiv"></div>
     <div class="txt">
-    <div class="alignment">
-        <p><b>10,987</b></p>
-        <p>REGISTERED CENTERS</p>
-        <p><b>98</b></p>
-        <p>COUNTRIES COVERED</p>
-        <p><b>1145</b></p>
-        <p>REGISTERED MEMBERS</p>
-      </div>
+        <div class="alignment">
+            <span class="title_paint observe observe_paint fill_color2 intersecting">
+                <span class="num yellow">10,391</span>
+            </span>
+            <!-- <p><b>10,987</b></p> -->
+            <p class="name">REGISTERED CENTERS</p>
+            <span class="num blue">98</span>
+            <p class="name">COUNTRIES COVERED</p>
+            <span class="num red">1145</span>
+            <p class="name">REGISTERED MEMBERS</p>
+        </div>
     </div>
-  </body>
+</body>
+
 </html>
